package com.xinqihd.sns.gameserver.proto;

option java_outer_classname = "XinqiBceMailRead"; 
/**
 * The user sends a new mail to another user
 */
message BceMailRead {
  /**
   * 0: inbox
   * 1: sentbox
   */
  optional int32 type = 1;
  /**
  * 0 based index of mails in user's mailbox
  */
  repeated int32 readIndexes = 2;
}
