package com.xinqihd.sns.gameserver.proto;

option java_outer_classname = "XinqiBseMailRead"; 
/**
 * The user read a mail
 */
message BseMailRead {
  optional bool succeed = 1 [default = true];
}
